# fastokens

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: build-maturin.yml  build-release-fastokens.yml  ci.yml
benchmarks/: sglang_bench.py
examples/: ablation.sh  dynamo_speed.py  get_step_kinds.rs  plot_bench.rs  print_pipeline.rs  profile_sample.rs  profile_stages.rs  sglang_quality.py  sglang_speed.py  simple_bench.rs
patches/: sglang-patch-full.patch  sglang-patch-minimal.patch
python/: Cargo.toml  pyproject.toml
python/fastokens/: __init__.py  _compat.py  _native.pyi
python/src/: lib.rs
python/tests/: test_transformers_patch.py
src/: added_tokens.rs  decoders.rs  json_structs.rs  lib.rs  models.rs  normalizers.rs  post_processors.rs  pre_tokenized.rs  pre_tokenizers.rs
src/decoders/: byte_level.rs
src/models/: bpe.rs
src/normalizers/: nfc.rs
src/pre_tokenizers/: byte_level.rs  split.rs
