[package]
name = "fastokens-python"
version = "0.1.0-post1"
edition = "2024"
description = ""
license = "Apache-2.0"
repository = "https://github.com/Atero-ai/fastokens"
homepage = "https://github.com/Atero-ai/fastokens"
documentation = "https://github.com/Atero-ai/fastokens/blob/main/README.md"

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
fastokens = { path = ".." }
pyo3 = {version = "0.25", features = ["extension-module", "abi3-py39"] }
pyo3-async-runtimes = { version = "0.25", features = ["tokio-runtime"] }
rayon = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
